--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/template/new-booking-search.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/template/new-booking-search.html
@@ -7,7 +7,8 @@
 			</booking-search-parameters>
 		</div>
 		<div class="row booking-search-results">
-			<lazy-loading-table></lazy-loading-table>
+			<lazy-loading-table (onAddExistingItem)="addBookingVMInCart($event)">
+			</lazy-loading-table>
 		</div>
 	</div>
 	<div class="col-xs-5 full-height">
