[T206] Added remove from cart feature

--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/template/new-booking-search.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/template/new-booking-search.html
@@ -12,7 +12,7 @@
 		</div>
 	</div>
 	<div class="col-xs-5 full-height booking-cart">
-		<lazy-loading-table #bookingCart>
+		<lazy-loading-table #bookingCart (onDelete)="removeBookingVMFromCart($event)">
 		</lazy-loading-table>
 	</div>
 </div>
