[T206] Added interval in booking cart & changed thdateinterval format

--- a/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
+++ b/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
@@ -1,7 +1,7 @@
 <loading-component [isLoading]="!didInit"></loading-component>
 
 <div *ngIf="didInit" class="lazy-loading-table-container">
-	<div class="row table-filter">
+	<div class="row table-filter" *ngIf="showTableHeader()">
 		<!--TODO: Investigate if !isCollapsed && !tableOptions.canSearch then the total sum is 16 != 12-->
 		<div *ngIf="tableOptions.canSearch" [ngClass]="{'col-xs-4 col-md-4': !isCollapsed, 'col-xs-12 col-md-12': isCollapsed}">
 			<div class="input-group">
