[T206] Refactoring in new booking

--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/template/new-booking-fill-details.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/template/new-booking-fill-details.html
@@ -1,4 +1,8 @@
-<div class="row">
-	<h1>Fill details</h1>
+<div class="row full-height">
+	<div class="col-xs-7 full-height right-margin">
+
+	</div>
+	<div class="col-xs-5 full-height">
+
+	</div>
 </div>
-	
