--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/template/new-booking-fill-details.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/template/new-booking-fill-details.html
@@ -1,6 +1,7 @@
 <div class="row full-height">
-	<div class="col-xs-7 full-height right-margin">
-
+	<div class="col-xs-7 full-height right-margin booking-cart-full">
+		<lazy-loading-table #bookingCartSelectable>
+		</lazy-loading-table>
 	</div>
 	<div class="col-xs-5 full-height">
 
