Updated new unitpal font

--- a/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
+++ b/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
@@ -100,7 +100,7 @@
 						<i class="fa unitpal-font">\</i>
 					</a>
 					<a class="btn btn-xs" *ngIf="canPerformAddExistingRowCommandOnItem(item)" (click)="addExistingItem(item)" title="{{ 'Add' | translate }}">
-						<i class="fa unitpal-font">'</i>
+						<i class="fa unitpal-font">G</i>
 					</a>
 				</td>
 			</tr>
