--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/components/template/booking-details-editor.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/components/template/booking-details-editor.html
@@ -1,8 +1,8 @@
 <div class="col-xs-12" *ngIf="bookingCartItem">
     <div class="row booking-details-container">
         <div class="col-sm-12 col-xs-12 booking-details-period">
-            <span class="period"><i class="fa unitpal-font">8</i> {{ intervalString }}</span>
-            <span><i class="fa fa-moon-o"></i> {{ noOfNights }} </span>
+            <span class="period"><i class="fa unitpal-font" title="{{'Period' | translate}}">8</i> {{ intervalString }}</span>
+            <span><i class="fa fa-moon-o" title="{{'Number of Nights' | translate}}"></i> {{ noOfNights }} </span>
         </div>
         <div class="col-xs-12 booking-details-row">
             <i class="fa fa-calendar-check-o" title="{{ 'Conditions' | translate }}"></i> {{ bookingCartItem.conditionsString }}
@@ -58,11 +58,36 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td width="80%">Gigi Vasile</td>
-                        <td width="20%">test..</td>
+                    <tr *ngFor="let customer of bookingCartItem.customerList">
+                        <td width="80%">{{ customer.customerName }}</td>
+                        <td width="20%">
+                            <span *ngIf="(isBilledCustomer(customer) && bookingCartItem.canChangeDefaultBilledCustomer) || !isBilledCustomer(customer)"
+                                (click)="changeCustomer(customer)">
+                                <span class="booking-details-action-button input-group-addon th-addon-button"> 
+                                    <i class="fa unitpal-font">(</i>  {{ 'Change' | translate }}
+                                </span>
+                            </span>
+
+                            <span *ngIf="isBilledCustomer(customer)" title="{{'The invoice will be generated with this customer' | translate}}" class="booking-details-action-button">
+                                {{ 'Billed To' | translate }}  <i class="fa unitpal-font">D</i>
+                            </span>
+                            
+                            <span *ngIf="!isBilledCustomer(customer) && bookingCartItem.canChangeDefaultBilledCustomer" title="{{'Generate the bill with this customer' | translate}}"
+                                (click)="markBilledCustomerFromTemplate(customer)">
+                                <span class="booking-details-action-button input-group-addon th-addon-button"> 
+                                    {{ 'Bill' | translate }}  <i class="fa unitpal-font">D</i>
+                                </span>
+                            </span>
+                        </td>
                     </tr>
                 </tbody>
+                <tfoot>
+                    <td>
+                        <a (click)="addCustomer()">
+                            <i class="fa unitpal-font">'</i>{{ 'Add Customer' | translate }}
+                        </a>
+				    </td>
+                </tfoot>
             </table>
         </div>
     </div>
