--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/template/new-booking-fill-details.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/template/new-booking-fill-details.html
@@ -4,7 +4,7 @@
 		</lazy-loading-table>
 	</div>
 	<div class="col-xs-5 full-height">
-		<div class="row" *ngIf="selectedBookingCartItemVM">
+		<div class="row full-height" *ngIf="selectedBookingCartItemVM">
 			<booking-details-editor 
 				[bookingCartItem]="selectedBookingCartItemVM" 
 				(onBookingItemChanged)="didUpdateBookingItem($event)">
