--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/container/template/new-booking-container.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/container/template/new-booking-container.html
@@ -9,12 +9,15 @@
 		<div class="col-xs-5 col-md-5 full-height">
 			<div class="row full-height">
 				<div class="col-xs-8">
-					<p class="btn-square-container">
+					<p class="btn-square-container" [ngClass]="{small: !isLastStep(), large: isLastStep()}">
 						<a class="btn btn-square btn-square-next-prev" [ngClass]="{disabled: !hasPreviousPage()}" (click)="movePrevious()">
 							<i class="fa unitpal-font"><</i>
 						</a>
-						<a class="btn btn-square btn-square-next-prev" [ngClass]="{disabled: !canMoveNext()}" (click)="moveNext()" >
+						<a class="btn btn-square btn-square-next-prev" *ngIf="!isLastStep()" [ngClass]="{disabled: !canMoveNext()}" (click)="moveNext()" >
 							<i class="fa unitpal-font">></i>
+						</a>
+						<a class="btn btn-square btn-square-finalize" *ngIf="isLastStep()" [ngClass]="{disabled: !canMoveNext()}" (click)="moveNext()" >
+							<i class="fa fa-envelope"></i> {{'Add Bookings' | translate}}
 						</a>
 					</p>
 					<p class="btn-err-container" *ngIf="errorString">
@@ -34,6 +37,7 @@
 <div class="modal-lg-body container">
 	<new-booking-search class="full-height" [hidden]="!isBookingSearch()"> </new-booking-search>
 	<new-booking-fill-details class="full-height" [hidden]="!isFillDetails()"> </new-booking-fill-details>
+	<new-booking-email-config class="full-height" [hidden]="!isEmailConfig()"></new-booking-email-config>
 	
 	<booking-customer-register class="full-height" *ngIf="isCustomerRegister()"> </booking-customer-register>
 </div>
