--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/components/template/booking-details-editor.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/components/template/booking-details-editor.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 full-height" *ngIf="bookingCartItem">
     <div class="row booking-details-container full-height" customScroll>
-        <div class="col-sm-12 col-xs-12 booking-details-period">
-            <span class="period"><i class="fa unitpal-font" title="{{'Period' | translate}}">8</i> {{ intervalString }}</span>
+        <div class="col-sm-12 col-xs-12 booking-details-header">
+            <span class="first-line"><i class="fa unitpal-font" title="{{'Period' | translate}}">8</i> {{ intervalString }}</span>
             <span><i class="fa unitpal-font" title="{{'Number of Nights' | translate}}">Y</i> {{ noOfNights }} </span>
         </div>
         <div class="col-xs-12 booking-details-row">
