[T206] Integrated bookings add

--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/container/template/new-booking-container.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/container/template/new-booking-container.html
@@ -16,8 +16,10 @@
 						<a class="btn btn-square btn-square-next-prev" *ngIf="!isLastStep()" [ngClass]="{disabled: !canMoveNext()}" (click)="moveNext()" >
 							<i class="fa unitpal-font">></i>
 						</a>
-						<a class="btn btn-square btn-square-finalize" *ngIf="isLastStep()" [ngClass]="{disabled: !canMoveNext()}" (click)="moveNext()" >
-							<i class="fa fa-envelope"></i> {{'Add Bookings' | translate}}
+						<a class="btn btn-square btn-square-finalize" *ngIf="isLastStep()" [ngClass]="{disabled: !canMoveNext()}" (click)="addBookings()" >
+							<i *ngIf="!isAddingBookings" class="fa fa-envelope"></i> 
+							<i *ngIf="isAddingBookings" class="fa fa-spinner fa-pulse"></i>
+							{{'Add Bookings' | translate}}
 						</a>
 					</p>
 					<p class="btn-err-container" *ngIf="errorString">
