--- a/views/reports/booking-confirmation.ejs
+++ b/views/reports/booking-confirmation.ejs
@@ -46,7 +46,7 @@
                     </div>
                     <div class="row" style="height:30px">
                         <div class="col-md-12" style="height:100%">
-                            <p style="position: absolute; right:15px; bottom: 0; margin: 0;"><%= headerBookingRefLabel %>: <b><%= bookingConfirmationVM.bookingReference %></b> / <%= headerGroupBookingRefLabel %>: <b><%= bookingConfirmationVM.groupBookingReference %></b></p>
+                            <p style="position: absolute; right:12px; bottom: 0; margin: 0;"><%= headerBookingRefLabel %>: <b><%= bookingConfirmationVM.bookingReference %></b> / <%= headerGroupBookingRefLabel %>: <b><%= bookingConfirmationVM.groupBookingReference %></b></p>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                 </div>
                 <div class="col-md-9">
                     <b><%= bookingConfirmationVM.roomCategoryName %></b><br>
-                    <span><%= bodyBookingPeriodLabel %>: <%= bookingConfirmationVM.bookedCapacity %></span><br>
+                    <span><%= bodyBookingCapacityLabel %>: <%= bookingConfirmationVM.bookedCapacity %></span><br>
                     <span><%= bodyBedSizesLabel %>: <%= bookingConfirmationVM.bedSizes %></span>
                 </div>
             </div>
