--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/template/hotel-operations-dashboard.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/template/hotel-operations-dashboard.html
@@ -1,3 +1,3 @@
-<arrivals-pane class="full-height"></arrivals-pane>
-<rooms-canvas></rooms-canvas>
-<departures-pane class="full-height"></departures-pane>
+<arrivals-pane [hotelOperationsDashboard]="self" class="pane full-height"></arrivals-pane>
+<rooms-canvas [hotelOperationsDashboard]="self" ></rooms-canvas>
+<departures-pane [hotelOperationsDashboard]="self" class="pane full-height"></departures-pane>
