Made the booking modal blocking

--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/container/template/new-booking-container.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/container/template/new-booking-container.html
@@ -28,7 +28,7 @@
 					</p>
 				</div>
 				<div class="col-xs-4 full-height">
-					<a class="btn btn-square float-right" *ngIf="showCloseButton" (click)="triggerOnCloseButtonPressed()">
+					<a class="btn btn-square float-right" *ngIf="showCloseButton" (click)="triggerOnCloseButtonPressed(false)">
 						<i class="fa unitpal-font">C</i>
 					</a>
 				</div>
