--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/modal/template/new-booking-modal.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/modal/template/new-booking-modal.html
@@ -1,6 +1,6 @@
 <div class="card">
 	<new-booking-container 
 		showCloseButton="true"
-		(onCloseButtonPressed)="closeDialog()">	
+		(onCloseButtonPressed)="closeDialog($event)">	
 	</new-booking-container>
 </div>
