Optimized for cards for multiple screen resolutions

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/departures-pane/template/departures-pane.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/departures-pane/template/departures-pane.html
@@ -11,7 +11,7 @@
 
 </div>
 <div class="body">
-	<departure-item class="selected p-6"
+	<departure-item
 		*ngFor="let departureItemVM of departureItemsVMList"
 		[ngClass]="{'selected': isDepartureItemSelected(departureItemVM)}" 
 		[departureItemVM] = "departureItemVM" 
