--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -679,7 +679,7 @@ lazy-loading-table {
 /* Bootstrap overrides */
 .btn-sm{
     padding: 0px 6px 0px 6px;
-    font-size: 10px;
+    font-size: 9px;
 }
 
 .btn-primary,
@@ -2018,12 +2018,10 @@ a.btn.btn-square:focus {
         align-items: stretch;
     }
 
-    /* Merge */
-
     hotel-operations-dashboard .pane {
         display: flex;
         background-color: #f3f3f3;
-        flex-basis: 278px;
+        flex-basis: 225px;
         flex-direction: column;
         flex-grow: 0;
     }
@@ -2043,7 +2041,6 @@ a.btn.btn-square:focus {
             display: flex;
             align-items: center;
             border-bottom: 1px solid #DBDBDB;
-            font-size: x-large;
             padding-left: 15px;
             flex-basis: 70px;
         }
@@ -2166,21 +2163,18 @@ a.btn.btn-square:focus {
         }
 
         .room-card {
-            margin-left: 12px;
-            margin-top: 12px;
+            height: 112px;
+            width: 216px;
+            background-color: white;
+            display: flex;
+            flex-direction: column;
+            margin-left: 6px;
+            margin-top: 6px;
             flex-shrink: 0;
             border-top: 2px solid #b9b9b9;
             border-right: 2px solid #b9b9b9;
             border-bottom: 2px solid #b9b9b9;
             border-radius: 3px;
-        }
-
-        .room-card {
-            height: 114px;
-            width: 256px;
-            background-color: white;
-            display: flex;
-            flex-direction: column;
         }
 
         .room-card .card-header{
@@ -2222,7 +2216,7 @@ a.btn.btn-square:focus {
             display: flex;
             flex-grow: 1;
             flex-direction: column;
-            
+            height: 67px;
         }
 
         .room-card .card-footer {
@@ -2231,8 +2225,8 @@ a.btn.btn-square:focus {
             justify-content: space-between;
             border-top: 1px solid #b9b9b9;
             padding: 6px 12px 6px 12px;
-            height: 36px;
-            font-size: 12px;
+            height: 33px;
+            font-size: 11px;
         }
 
         .room-card.card-footer .period{
@@ -2273,16 +2267,16 @@ a.btn.btn-square:focus {
 
         arrival-item .header{
             padding-top: 10px;
-            font-size: large;
+            font-size: 16px;
         }
 
         arrival-item .body .room-type {
-            font-size: small;
+            font-size: 12px;
             color: #999;
         }
 
         arrival-item .body .period {
-            font-size: small;
+            font-size: 11px;
             align-items: center;
         }
 
@@ -2318,7 +2312,7 @@ a.btn.btn-square:focus {
         arrival-helper{
             border: 3px solid #fc8433;
             border-radius: 4px;
-            width: 278px;
+            width: 216px;
             background: white;
         }
 
@@ -2340,6 +2334,7 @@ a.btn.btn-square:focus {
             border-bottom: 1px solid #f3f3f3;
             display: flex;
             flex-direction: column;
+            padding: 6px 12px 6px 12px;
         }
 
         departure-item.selected {
@@ -2348,16 +2343,16 @@ a.btn.btn-square:focus {
 
         departure-item .header{
             padding-top: 10px;
-            font-size: large;
+            font-size: 16px;
         }
 
         departure-item .body .room-type {
-            font-size: small;
+            font-size: 0px;
             color: #999;
         }
 
         departure-item .body .period {
-            font-size: small;
+            font-size: 11px;
             align-items: center;
         }
 
@@ -2391,7 +2386,7 @@ a.btn.btn-square:focus {
         }
 
         departure-item .footer .check-out {
-            font-size: x-small;
+            font-size: 9px;
             background-color: green;
             color: white;
             border-radius: 3px;
@@ -2417,8 +2412,7 @@ a.btn.btn-square:focus {
             height: 20px;
             width: 20px;
             border-radius: 50%;
-            font-size: smaller;
-            /*text-align: center;*/
+            font-size: 9px;
             margin-left: 6px;
             display: flex;
             align-items: center;
@@ -2736,8 +2730,16 @@ a.btn.btn-square:focus {
   font-size: 8px !important;
 }
 
+.f-9 {
+  font-size: 9px !important;
+}
+
 .f-10 {
   font-size: 10px !important;
+}
+
+.f-11 {
+  font-size: 11px !important;
 }
 
 .f-12 {
@@ -2746,6 +2748,10 @@ a.btn.btn-square:focus {
 
 .f-16 {
   font-size: 16px !important;
+}
+
+.f-16 {
+  font-size: 18px !important;
 }
 
 .f-24 {
