--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/components/template/booking-details-editor.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/components/template/booking-details-editor.html
@@ -39,8 +39,8 @@
             </table>
         </div>
         <div class="col-xs-12 booking-details-table">
-            <table class="table">
-                <thead>
+            <table class="table form-group">
+                <thead class="input-group" [ngClass]="{'form-warning': !didSelectBilledToCustomer()}">
                     <tr>
                         <th>
                             {{ 'Customers' | translate }}
@@ -48,6 +48,7 @@
                         <th></th>
                     </tr>
                 </thead>
+                <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Add at least one customer' | translate }}</small></label>
                 <tbody>
                     <tr *ngFor="let customer of bookingCartItem.customerList">
                         <td width="80%" class="booking-details-action-description">{{ customer.customerName }}</td>
@@ -80,16 +81,13 @@
                     </td>
                 </tfoot>
             </table>
-            <small class="text-muted booking-details-table-text-muted" *ngIf="!didSelectBilledToCustomer()">
-                <i class="fa fa-info-circle"></i>  {{ 'Mininum one customer' | translate }}
-            </small>
         </div>
         <div class="col-xs-12">
             <hr>
             <div class="row" *ngIf="didSelectBilledToCustomer()">
                 <div class="col-md-6 col-xs-6 form-group">
                     <label>{{ 'Payment Guarantee' | translate }}</label>
-                    <div class="input-group">
+                    <div class="input-group" [ngClass]="{'form-warning': !paymentGuarantee && needsPaymentGuarantee()}">
                         <div class="btn-group" data-toggle="buttons">
                             <button class="btn btn-default" (click)="paymentGuarantee=true" [ngClass]="{'active': paymentGuarantee}"
                                 [disabled]="readonly">
@@ -101,7 +99,7 @@
                             </button>
                         </div>
                     </div>
-                    <small class="text-muted booking-details-table-text-muted" *ngIf="!paymentGuarantee && needsPaymentGuarantee()"><i class="fa fa-info-circle"></i> {{ 'Payment guarantee is required for this price product.' | translate }} </small>
+                    <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Payment guarantee is required for this price product.' | translate }}</small></label>
                 </div>
                 <div class="col-md-6 col-xs-6 form-group" *ngIf="paymentGuarantee">
                     <label>{{ 'Payment Method' | translate }}</label>
