--- a/views/reports/booking-confirmation.ejs
+++ b/views/reports/booking-confirmation.ejs
@@ -41,12 +41,12 @@
                 <div class="col-md-8" style="height:60px">
                     <div class="row" style="height:30px">
                         <div class="col-md-12" style="height:100%">
-                            <i style="position: absolute; right: 15px; bottom: 0;"><%= headerTitle %></i>
+                            <i style="position: absolute; right: 15px; bottom: 0;"><%= headerTitle %></i><br><br>
                         </div>
                     </div>
-                    <div class="row" style="height:30px">
+                    <div class="row" style="height:40px">
                         <div class="col-md-12" style="height:100%">
-                            <p style="position: absolute; right:12px; bottom: 0; margin: 0;"><%= headerBookingRefLabel %>: <b><%= bookingConfirmationVM.bookingReference %></b> / <%= headerGroupBookingRefLabel %>: <b><%= bookingConfirmationVM.groupBookingReference %></b></p>
+                            <p style="position: absolute; right:12px; bottom: 0; margin: 0; text-align: right;"><%= headerBookingRefLabel %>: <b><%= bookingConfirmationVM.bookingReference %></b><br><%= headerGroupBookingRefLabel %>: <b><%= bookingConfirmationVM.groupBookingReference %></b></p>
                         </div>
                     </div>
                 </div>
