Day Navigation & Filtering

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/arrivals-pane/components/arrival-item/template/arrival-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/arrivals-pane/components/arrival-item/template/arrival-item.html
@@ -3,7 +3,7 @@
 	<i class="fa fa-ellipsis-v"></i>
 </div>
 <div class="right p-6">
-	<div class="header">
+	<div class="header clickable">
 		{{arrivalItemVM.ClientName}}
 	</div>
 	<div class="body">
