--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/departures-pane/components/departure-item/template/departure-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/departures-pane/components/departure-item/template/departure-item.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header clickable">
 	<span><b>501</b></span>
 	<span>{{departureItemVM.ClientName}}</span>
 </div>
@@ -6,11 +6,7 @@
 	<div class="room-type">Double Room</div>
 	<div class="booking-quick-details">
 		<div class="period orange-color">
-			<span class="unitpal-font p-r-6">C</span>
-			<span class="unitpal-font p-r-6">D</span>
-			<span class="unitpal-font p-r-6">E</span>
-			<span class="unitpal-font p-r-6">F</span>
-
+			<span class="unitpal-font  clickable p-r-6">D</span>
 		</div>
 		<div class="other-details gray-color">
 			<span class="unitpal-font">:</span> {{departureItemVM.NumberOfPeople}}
