--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/rooms-canvas/components/room-card/template/room-card.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/rooms-canvas/components/room-card/template/room-card.html
@@ -1,17 +1,14 @@
 <div class="room-card occupied" *ngIf='roomVM.Status == "Occupied"'>
 	<div class="card-header">
 		<div class="section1">
-			<div class="room-number">{{ roomVM.Properties.Name }}</div>
+			<div class="room-number clickable">{{ roomVM.Properties.Name }}</div>
 			<div class="room-details">{{ roomVM.Type }}</div>
 		</div>
 		<div class="section2 flex-row flex-jc-sb">
-			<div class="customer-name">{{ roomVM.Properties.Booking.ClientName}}</div>
+			<div class="customer-name clickable">{{ roomVM.Properties.Booking.ClientName }}</div>
 			<div class="room-stats flex-row flex-center-v">
-				<div class="circle-sm stat-yellow">
-					<span class="unitpal-font">E</span>
-				</div>
-				<div class="circle-sm stat-tomato">
-					<span class="unitpal-font">F</span>
+				<div *ngIf="maintenance" class="clickable clickable circle-sm" [ngClass]="maintenance.cssClass" (click)="maintenance.clickHandler()" title="{{maintenance.title}}">
+					<span class="unitpal-font">{{maintenance.icon}}</span>
 				</div>
 			</div>
 		</div>
@@ -32,17 +29,14 @@
 <div class="room-card free" *ngIf='roomVM.Status == "Free"'>
 	<div class="card-header">
 		<div class="section1">
-			<div class="room-number">{{ roomVM.Properties.Name }}</div>
+			<div class="room-number clickable">{{ roomVM.Properties.Name }}</div>
 			<div class="room-details">{{ roomVM.Type }}</div>
 		</div>
 		<div class="section2 flex-row flex-jc-sb">
-			<div class="customer-name"></div>
+			<div class="customer-name clickable"></div>
 			<div class="room-stats flex-row flex-center-v">
-				<div class="circle-sm stat-yellow">
-					<span class="unitpal-font">E</span>
-				</div>
-				<div class="circle-sm stat-tomato">
-					<span class="unitpal-font">F</span>
+				<div *ngIf="maintenance" class="clickable circle-sm" [ngClass]="maintenance.cssClass" (click)="maintenance.clickHandler()" title="{{maintenance.title}}">
+					<span class="unitpal-font">{{maintenance.icon}}</span>
 				</div>
 			</div>
 		</div>
@@ -59,17 +53,14 @@
 <div class="room-card out-of-service" *ngIf='roomVM.Status == "OutOfService"'>
 	<div class="card-header">
 		<div class="section1">
-			<div class="room-number">{{ roomVM.Properties.Name }}</div>
+			<div class="room-number clickable">{{ roomVM.Properties.Name }}</div>
 			<div class="room-details">{{ roomVM.Type }}</div>
 		</div>
 		<div class="section2 flex-row flex-jc-sb">
-			<div class="customer-name"></div>
+			<div class="customer-name clickable"></div>
 			<div class="room-stats flex-row flex-center-v">
-				<div class="circle-sm stat-yellow">
-					<span class="unitpal-font">E</span>
-				</div>
-				<div class="circle-sm stat-tomato">
-					<span class="unitpal-font">F</span>
+				<div *ngIf="maintenance" class="clickable circle-sm" [ngClass]="maintenance.cssClass" (click)="maintenance.clickHandler()" title="{{maintenance.title}}">
+					<span class="unitpal-font">{{maintenance.icon}}</span>
 				</div>
 			</div>
 		</div>
@@ -86,17 +77,14 @@
 <div class="room-card reserved" *ngIf='roomVM.Status == "Reserved"'>
 	<div class="card-header">
 		<div class="section1">
-			<div class="room-number">{{ roomVM.Properties.Name }}</div>
+			<div class="room-number clickable">{{ roomVM.Properties.Name }}</div>
 			<div class="room-details">{{ roomVM.Type }}</div>
 		</div>
 		<div class="section2 flex-row flex-jc-sb">
-			<div class="customer-name"></div>
+			<div class="customer-name clickable"></div>
 			<div class="room-stats flex-row flex-center-v">
-				<div class="circle-sm stat-yellow">
-					<span class="unitpal-font">E</span>
-				</div>
-				<div class="circle-sm stat-tomato">
-					<span class="unitpal-font">F</span>
+				<div *ngIf="maintenance" class="clickable circle-sm" [ngClass]="maintenance.cssClass" (click)="maintenance.clickHandler()" title="{{maintenance.title}}">
+					<span class="unitpal-font">{{maintenance.icon}}</span>
 				</div>
 			</div>
 		</div>
